// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FocusOverlay renders correctly when left is focused 1`] = `
<DocumentFragment>
  .cache-14lpp9t-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #521094;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-14lpp9t-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-14lpp9t-StyledDiv etutiin0"
    data-focusposition="left"
    style="transform: translate3d(0px, 0, 0) scale3d(1, 1, 1); width: 400px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when left is focused and has mouse down 1`] = `
<DocumentFragment>
  .cache-14lpp9t-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #521094;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-14lpp9t-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-14lpp9t-StyledDiv etutiin0"
    data-focusposition="left"
    style="transform: translate3d(0px, 0, 0) scale3d(1.015, 1, 1); width: 400px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when right is focused 1`] = `
<DocumentFragment>
  .cache-14lpp9t-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #521094;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-14lpp9t-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-14lpp9t-StyledDiv etutiin0"
    data-focusposition="right"
    style="transform: translate3d(408px, 0, 0) scale3d(1, 1, 1); width: 200px;"
  />
</DocumentFragment>
`;

exports[`FocusOverlay renders correctly when right is focused and has mouse down 1`] = `
<DocumentFragment>
  .cache-14lpp9t-StyledDiv {
  position: absolute;
  height: calc(100% - 8px);
  border-radius: 4px;
  background: #521094;
  transform-origin: left center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-14lpp9t-StyledDiv[data-focusposition='right'] {
  transform-origin: right center;
}

<div
    class="cache-14lpp9t-StyledDiv etutiin0"
    data-focusposition="right"
    style="transform: translate3d(408px, 0, 0) scale3d(1.03, 1, 1); width: 200px;"
  />
</DocumentFragment>
`;

exports[`SwitchButton renders correctly 1`] = `
<DocumentFragment>
  .cache-tib6m2-StyledBorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-1vcs3d3-Container-StyledSelectableCard {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #464959;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1vcs3d3-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover,
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within,
.cache-1vcs3d3-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-checked='true'] label {
  color: #ffffff;
}

.cache-1vcs3d3-Container-StyledSelectableCard:not([data-checked='true']) label:hover {
  color: #521094;
}

.cache-wxsmfw-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='false'],
.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-wxsmfw-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-wxsmfw-RadioContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-wxsmfw-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-po1kkw-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-po1kkw-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-po1kkw-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-po1kkw-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    style="display: inline-flex;"
  >
    <div
      class="cache-tib6m2-StyledBorderedBox e4ryteh1"
    >
      <div
        class="e4ryteh0 cache-1vcs3d3-Container-StyledSelectableCard e1s5n3hj1"
        data-checked="false"
        data-disabled="false"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj0 cache-wxsmfw-RadioContainer-StyledElement ehkrmld0"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="cache-po1kkw-RadioInput ehkrmld1"
            id="test-left"
            name="test"
            type="radio"
            value="left"
          />
          <svg
            class="cache-j51tvx-StyledIcon ehkrmld2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-u6wkt9-InnerCircleRing ehkrmld4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          <label
            for="test-left"
          >
            Left
          </label>
        </div>
      </div>
      <div
        class="e4ryteh0 cache-1vcs3d3-Container-StyledSelectableCard e1s5n3hj1"
        data-checked="true"
        data-disabled="false"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj0 cache-wxsmfw-RadioContainer-StyledElement ehkrmld0"
          data-checked="true"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="cache-po1kkw-RadioInput ehkrmld1"
            id="test-right"
            name="test"
            type="radio"
            value="right"
          />
          <svg
            class="cache-j51tvx-StyledIcon ehkrmld2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-u6wkt9-InnerCircleRing ehkrmld4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          <label
            for="test-right"
          >
            Right
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton renders correctly with right value 1`] = `
<DocumentFragment>
  .cache-tib6m2-StyledBorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-1vcs3d3-Container-StyledSelectableCard {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #464959;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1vcs3d3-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover,
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within,
.cache-1vcs3d3-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-checked='true'] label {
  color: #ffffff;
}

.cache-1vcs3d3-Container-StyledSelectableCard:not([data-checked='true']) label:hover {
  color: #521094;
}

.cache-wxsmfw-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='false'],
.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-wxsmfw-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-wxsmfw-RadioContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-wxsmfw-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-po1kkw-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-po1kkw-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-po1kkw-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-po1kkw-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    style="display: inline-flex;"
  >
    <div
      class="cache-tib6m2-StyledBorderedBox e4ryteh1"
    >
      <div
        class="e4ryteh0 cache-1vcs3d3-Container-StyledSelectableCard e1s5n3hj1"
        data-checked="false"
        data-disabled="false"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj0 cache-wxsmfw-RadioContainer-StyledElement ehkrmld0"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="cache-po1kkw-RadioInput ehkrmld1"
            id="test-left"
            name="test"
            type="radio"
            value="left"
          />
          <svg
            class="cache-j51tvx-StyledIcon ehkrmld2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-u6wkt9-InnerCircleRing ehkrmld4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          <label
            for="test-left"
          >
            Left
          </label>
        </div>
      </div>
      <div
        class="e4ryteh0 cache-1vcs3d3-Container-StyledSelectableCard e1s5n3hj1"
        data-checked="true"
        data-disabled="false"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj0 cache-wxsmfw-RadioContainer-StyledElement ehkrmld0"
          data-checked="true"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="cache-po1kkw-RadioInput ehkrmld1"
            id="test-right"
            name="test"
            type="radio"
            value="right"
          />
          <svg
            class="cache-j51tvx-StyledIcon ehkrmld2"
            size="24"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="8"
                stroke-width="2"
              />
              <circle
                class="cache-u6wkt9-InnerCircleRing ehkrmld4"
                cx="12"
                cy="12"
                r="6"
              />
              <circle
                class="cache-ivayk3-RadioMark ehkrmld3"
                cx="12"
                cy="12"
                r="4"
              />
            </g>
          </svg>
          <label
            for="test-right"
          >
            Right
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SwitchButton renders with tooltip 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

.cache-tib6m2-StyledBorderedBox {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  position: relative;
}

.cache-1vcs3d3-Container-StyledSelectableCard {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #464959;
  border: none;
  height: 40px;
  padding: 8px 16px;
  font-weight: 500;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1vcs3d3-Container-StyledSelectableCard:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover,
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within,
.cache-1vcs3d3-Container-StyledSelectableCard:active {
  box-shadow: none;
  border: none;
}

.cache-1vcs3d3-Container-StyledSelectableCard:hover:not([data-error='true'][data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:focus-within:not([data-error='true'][data-disabled='true']),
.cache-1vcs3d3-Container-StyledSelectableCard:active:not([data-error='true'][data-disabled='true']) {
  border: none;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-checked='true'] {
  border: none;
}

.cache-1vcs3d3-Container-StyledSelectableCard[data-checked='true'] label {
  color: #ffffff;
}

.cache-1vcs3d3-Container-StyledSelectableCard:not([data-checked='true']) label:hover {
  color: #521094;
}

.cache-wxsmfw-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='false'],
.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-wxsmfw-RadioContainer-StyledElement:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 {
  fill: #d9dadd;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-wxsmfw-RadioContainer-StyledElement[data-checked='true'] {
  color: #521094;
}

.cache-wxsmfw-RadioContainer-StyledElement[data-error='true'] {
  color: #b3144d;
}

.cache-wxsmfw-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-wxsmfw-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-po1kkw-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-po1kkw-RadioInput+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-po1kkw-RadioInput:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-po1kkw-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #b3144d;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-po1kkw-RadioInput:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffebf2;
  fill: #b3144d;
}

.cache-po1kkw-RadioInput[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-j51tvx-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b5b7bd;
}

.cache-j51tvx-StyledIcon .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-u6wkt9-InnerCircleRing {
  fill: #b5b7bd;
}

<div
    aria-describedby=":ra:"
    class="cache-yb56yg-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    <div
      style="display: inline-flex;"
    >
      <div
        class="cache-tib6m2-StyledBorderedBox e4ryteh1"
      >
        <div
          class="e4ryteh0 cache-1vcs3d3-Container-StyledSelectableCard e1s5n3hj1"
          data-checked="false"
          data-disabled="false"
        >
          <div
            aria-disabled="false"
            class="e1s5n3hj0 cache-wxsmfw-RadioContainer-StyledElement ehkrmld0"
            data-checked="false"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              class="cache-po1kkw-RadioInput ehkrmld1"
              id="test-left"
              name="test"
              type="radio"
              value="left"
            />
            <svg
              class="cache-j51tvx-StyledIcon ehkrmld2"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="8"
                  stroke-width="2"
                />
                <circle
                  class="cache-u6wkt9-InnerCircleRing ehkrmld4"
                  cx="12"
                  cy="12"
                  r="6"
                />
                <circle
                  class="cache-ivayk3-RadioMark ehkrmld3"
                  cx="12"
                  cy="12"
                  r="4"
                />
              </g>
            </svg>
            <label
              for="test-left"
            >
              Left
            </label>
          </div>
        </div>
        <div
          class="e4ryteh0 cache-1vcs3d3-Container-StyledSelectableCard e1s5n3hj1"
          data-checked="true"
          data-disabled="false"
        >
          <div
            aria-disabled="false"
            class="e1s5n3hj0 cache-wxsmfw-RadioContainer-StyledElement ehkrmld0"
            data-checked="true"
          >
            <input
              aria-disabled="false"
              aria-invalid="false"
              checked=""
              class="cache-po1kkw-RadioInput ehkrmld1"
              id="test-right"
              name="test"
              type="radio"
              value="right"
            />
            <svg
              class="cache-j51tvx-StyledIcon ehkrmld2"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <circle
                  cx="12"
                  cy="12"
                  r="8"
                  stroke-width="2"
                />
                <circle
                  class="cache-u6wkt9-InnerCircleRing ehkrmld4"
                  cx="12"
                  cy="12"
                  r="6"
                />
                <circle
                  class="cache-ivayk3-RadioMark ehkrmld3"
                  cx="12"
                  cy="12"
                  r="4"
                />
              </g>
            </svg>
            <label
              for="test-right"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
